<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/de_frm_backgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/de_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:scaleType="center"
            android:src="@mipmap/de_bg" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.xinguan14.jdyp.MyVeiw.ClearWriteEditText
            android:id="@+id/forget_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rc_ed_public_service_search_selector"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="5dip"
            android:hint="@string/phone_number"
            android:maxLength="11"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textColor="@color/de_title_bg"
            android:textColorHint="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <com.xinguan14.jdyp.MyVeiw.ClearWriteEditText
                android:id="@+id/forget_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="6"
                android:background="@drawable/rc_ed_public_service_search_selector"
                android:drawableLeft="@drawable/ic_code"
                android:drawablePadding="5dip"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="10dip"

                android:singleLine="true"
                android:textColor="@color/de_title_bg"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/btn_forget_getcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="4"
                android:background="@drawable/rs_select_btn_gray"
                android:clickable="false"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/send_code"
                android:textColor="#FFF"
                android:textSize="12dp" />

        </LinearLayout>

        <com.xinguan14.jdyp.MyVeiw.ClearWriteEditText
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rc_ed_public_service_search_selector"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dip"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/de_title_bg"
            android:textColorHint="#FFFFFF" />

        <com.xinguan14.jdyp.MyVeiw.ClearWriteEditText
            android:id="@+id/forget_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dip"
            android:background="@drawable/rc_ed_public_service_search_selector"
            android:hint="@string/login_pwd_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/de_title_bg"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/btn_forget_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/rs_select_btn_gray"
            android:clickable="false"
            android:text="@string/confirm"
            android:textColor="#FFF" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="15dp"
        android:text="@string/register"
        android:textColor="#999999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="#999999"
        android:textSize="14sp" />
</RelativeLayout>
